# scratchstack-wrapper-aws-c-auth

./: Cargo.toml  README.md  build.rs
src/: lib.rs  tests.rs
